<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/menu_notifications"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_directions_bus"
            android:title="@string/menu_recenttrips" />

        <item
            android:id="@+id/nav_busdetail"
            android:icon="@drawable/ic_directions_bus"
            android:title="@string/menu_busdetail" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/menu_settings"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>



</menu>
