<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/fab_margin"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/title_ts" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:background="@drawable/bottom_layout"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/layout_margin"
                    android:src="@drawable/ic_institute" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/instituteAutoComTvLayout"
                    style="@style/AppDropDownLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/hint_institute_name"
                    app:endIconDrawable="@drawable/ic_search"
                    app:endIconMode="custom"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/error_color">

                    <AutoCompleteTextView
                        android:id="@+id/instituteAutoComTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="2"
                        android:ellipsize="start"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textColor="@color/secondaryTextColor" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/layout_margin"
                    android:src="@drawable/ic_phone" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneEdtLayout"
                    style="@style/AppTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/hint_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:textColor="@color/secondaryTextColor" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/layout_margin"
                    android:src="@drawable/ic_lock" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordEdtLayout"
                    style="@style/AppTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/hint_pwd"
                    app:endIconMode="password_toggle"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="true"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:textColor="@color/secondaryTextColor" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="@dimen/layout_margin"
                android:padding="12dp"
                android:text="@string/login_btn" />


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>