<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_navigation"
        app:itemTextColor="@color/secondaryTextColor"
        app:menu="@menu/activity_navigation_drawer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/notificationLayout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/notification_ml"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_note"
                    android:textSize="@dimen/desc_ts" />

                <TextView
                    android:id="@+id/notificationTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:text="to bottom in the navigationview. xml . You need to have a container navigation view layout and then that should contain two more navigation layouts. You align those to top and bottom of the in the navigationview. xml . You need to have a container navigation view layout and then that should contain two more navigation layouts. You align those to top and bottom of the"
                    android:textSize="@dimen/desc_ts" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/bottomLinkLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:padding="@dimen/layout_margin">

                <TextView
                    android:id="@+id/privacyTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/privacy_link"
                    android:textColor="@color/app_blue"
                    android:textSize="@dimen/small_ts" />

                <TextView
                    android:id="@+id/termsTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/terms_link"
                    android:textColor="@color/app_blue"
                    android:textSize="@dimen/small_ts" />


            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
