<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="left|center"
        android:background="@color/primaryColor"
        android:paddingLeft="@dimen/layout_margin"
        android:paddingRight="@dimen/layout_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fab_margin"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/title_ts" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <!--    <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="@dimen/card_elevation">-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:orientation="vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/driverNameEdtLayout"
                        style="@style/AppTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/hint_driver_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/driverNameEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/secondaryTextColor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/genderEdtLayout"
                                style="@style/AppTextInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:hint="@string/hint_gender">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/genderEdt"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:editable="false"
                                    android:enabled="false"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:textColor="@color/secondaryTextColor" />

                            </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/bloodgpEdtLayout"
                                style="@style/AppTextInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:hint="@string/hint_bloodgp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/bloodgpEdt"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:editable="false"
                                    android:enabled="false"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:textColor="@color/secondaryTextColor" />
                            </com.google.android.material.textfield.TextInputLayout>


                        </LinearLayout>

                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/dlEdtLayout"
                        style="@style/AppTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/hint_dl">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dlEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/secondaryTextColor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneEdtLayout"
                        style="@style/AppTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/hint_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/secondaryTextColor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/altphoneEdtLayout"
                        style="@style/AppTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/hint_altphone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/altphoneEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/secondaryTextColor" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/instituteEdtLayout"
                        style="@style/AppTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/hint_institute_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/instituteEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/secondaryTextColor" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

         <!--   </com.google.android.material.card.MaterialCardView>-->


        </LinearLayout>

    </ScrollView>


</LinearLayout>