<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondaryColor"
            android:gravity="center"
            android:padding="@dimen/layout_margin"
            android:text="Change Password"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/secondaryTextColor"
            android:textFontWeight="200"
            android:textSize="@dimen/title_ts" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/layout_margin"
            android:padding="@dimen/layout_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldPasswordEdtLayout"
                style="@style/AppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_old_pwd">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPasswordEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:enabled="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/secondaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordEdtLayout"
                style="@style/AppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_new_pwd">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPasswordEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:enabled="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/secondaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordEdtLayout"
                style="@style/AppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/hint_confirm_pwd">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:enabled="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/secondaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="cancel"
                    android:layout_marginRight="@dimen/layout_padding"/>

                <Button
                    android:id="@+id/successBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="submit"
                    android:layout_marginLeft="@dimen/layout_padding"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>